[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-linux-ops-toolkit"
version = "0.1.0"
description = "Unified toolkit: linux triage + KESL log analyzer modules"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "N7" }]

[project.scripts]
elot = "elotoolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

